[tool.poetry]
name = "pyrecest"
description = "Framework for recursive Bayesian estimation in Python."
readme = "README.md"
authors = ["Florian Pfaff <pfaff@ias.uni-stuttgart.de>"]
version = "1.0.1"
 
[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "*"
scipy = "^1.17.1"
matplotlib = "*"
mpmath = "*"
bayesian-filters = "*"
pyshtools = "*"
beartype = "*"
shapely = "*"

[tool.poetry.extras]
healpy_support = ["healpy"]
pytorch_support = ["torch"]
jax_support = ["jax", "jaxlib", "autograd"]

[tool.poetry.group.dev.dependencies]
healpy = "*"
torch = "*"
jax = "*"
jaxlib = "*"
autograd = "*"
autopep8 = "^2.3.2"
pytest = "*"
parameterized = "*"

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
line-length = 180

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:bayesian_filters.*",
    "ignore::DeprecationWarning:mpmath.*",
    "ignore::scipy.optimize.OptimizeWarning",
]
