[tool.poetry]
name = "pyrecest"
description = "Framework for recursive Bayesian estimation in Python."
readme = "README.md"
authors = ["Florian Pfaff <pfaff@ias.uni-stuttgart.de>"]
version = "2.2.2"
license = "MIT"
keywords = [
  "bayesian-filtering",
  "recursive-estimation",
  "tracking",
  "multi-target-tracking",
  "manifolds",
  "directional-statistics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
Homepage = "https://github.com/FlorianPfaff/PyRecEst"
Documentation = "https://florianpfaff.github.io/PyRecEst/"
Repository = "https://github.com/FlorianPfaff/PyRecEst"
Issues = "https://github.com/FlorianPfaff/PyRecEst/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 
[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "*"
scipy = "^1.17.1"
matplotlib = "*"
mpmath = "*"
pyshtools = "*"
beartype = "*"
shapely = "*"
healpy = { version = "*", optional = true }
torch = { version = "*", optional = true }
jax = { version = "*", optional = true }
jaxlib = { version = "*", optional = true }
autograd = { version = "*", optional = true }

[tool.poetry.extras]
healpy_support = ["healpy"]
pytorch_support = ["torch"]
jax_support = ["jax", "jaxlib", "autograd"]

[tool.poetry.group.dev.dependencies]
healpy = "*"
torch = "*"
jax = "*"
jaxlib = "*"
autograd = "*"
autopep8 = "^2.3.2"
pytest = "*"
parameterized = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = { version = "^1.0.4", extras = ["python"] }

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
line-length = 180

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:mpmath.*",
    "ignore::scipy.optimize.OptimizeWarning",
    "ignore:'return' in a 'finally' block:SyntaxWarning:autograd\\.wrap_util",
]
[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]
ignored-modules = ["pyrecest.backend", "healpy"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "redefined-builtin",
  "cyclic-import",
  "too-many-locals",
  "too-many-return-statements",
  "too-many-branches",
  "too-many-statements",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-instance-attributes",
  "duplicate-code",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 6
max-parents = 15
max-public-methods = 25
min-public-methods = 0
